Fix namespace warning.

--- a/client/components/panels/style.scss
+++ b/client/components/panels/style.scss
@@ -17,6 +17,10 @@
 				margin-right: 0;
 			}
 
+			.custom-development-plugin-panel__column--button {
+				margin-right: 5px;
+			}
+
 			&.custom-development-plugin-panel__column--code-block {
 				width: 40rem;
 				padding: 2rem;
